[Swagger]: add link server
