# docs/swagger.yaml
@@ -23,7 +23,6 @@ definitions:
         type: string
       data:
         $ref: '#/definitions/dchat.Data'
-        type: object
       type:
         example: send_text
         type: string
@@ -87,7 +86,7 @@ info:
     email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
-  description: This is swagger for chat server.
+  description: "This is swagger for chat server.\nlocal:\t  http://localhost:5000/.\nstaging:    http://vdat-mcsvc-chat-staging.vdatlab.com/.\nproduction: https://vdat-mcsvc-chat.vdatlab.com/."
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -396,4 +395,7 @@ paths:
       summary: Chat websocket
       tags:
       - dchat
+schemes:
+- http
+- https
 swagger: "2.0"
